# my_muon_fsdp2

./: .coveragerc  .gitignore  AGENTS.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: test-cpu.yml
.sisyphus/: boulder.json
.sisyphus/notepads/muon_fsdp_implementation/: issues.md  learnings.md
.sisyphus/plans/: muon_fsdp_implementation.md
docs/: api.md  faq.md  performance.md
examples/: fsdp_distributed.py  hdsp_training.py  mixed_adamw.py  simple_muon.py  train_gpt.py  train_sso.py
examples_new/: mac_gloo_validation.py  single_gpu.py
muon_fsdp/: __init__.py  distributed.py  fsdp.py  hdsp.py  optimizer.py  spectral.py  sso.py  utils.py
src/fsdp2_utils/: __init__.py  base.py  cli.py  comm.py  dtensor.py  fsdp_utils.py  muon.py  numerical.py
src/muon_fsdp/: __init__.py  cli.py  distributed.py  fsdp.py  optimizer.py  spectral.py  sso.py  utils.py
tests/: __init__.py  conftest.py  test_distributed.py  test_distributed_demo.py  test_distributed_real.py  test_distributed_training.py  test_hdsp.py  test_multi_process.py  test_optimizer.py  test_sso.py  test_training_light.py  test_utils.py
tests/mocks/: fsdp_mock.py  hdsp_mock.py
