[project]
name = "fsdp2-utils"
version = "0.2.0"
description = "通用 FSDP2 工具库 - 提供 PyTorch FSDP2 下的通用操作和优化器抽象"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "FSDP2 Utils Contributors"}]
requires-python = ">=3.12"
dependencies = ["torch>=2.9.0,<2.11.0"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.12.0",
]
lint = [
    "ruff>=0.3.0",
    "mypy>=1.8.0",
]

[project.scripts]
fsdp2-utils = "fsdp2_utils.cli:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

# UV 配置 - 使用清华源为主，华为源为辅
[[tool.uv.index]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[[tool.uv.index]]
name = "huawei"
url = "https://repo.huaweicloud.com/repository/pypi/simple"

[tool.uv.pip]
index-url = "https://pypi.tuna.tsinghua.edu.cn/simple"
extra-index-url = ["https://repo.huaweicloud.com/repository/pypi/simple"]

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests*", "examples*"]

[tool.setuptools.package-dir]
"" = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow",
    "distributed: marks tests requiring distributed",
    "cuda: marks tests requiring CUDA",
]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
no_implicit_optional = true
strict_equality = true

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "C4"]
ignore = [
    "N803",  # argument name should be lowercase (math notation like G, X, A, B)
    "N806",  # variable should be lowercase (math notation)
]

[tool.ruff.lint.isort]
known-first-party = ["src.muon_fsdp"]
